<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="permission_necessary">Permessi necessari</string>
    <string name="storage_permission_is_encessary_to_wrote_event">Permessi per scrivere in memoria</string>
    <string name="uppercaseAppName">ACCOUNTS</string>
    <string name="AppName">Accounts beta</string>
    <string name="lowercaseAppName">Accounts</string>
    <string name="imageApp">Immagine App</string>
    <string name="usernameHint">Utente</string>
    <string name="passswordHint">Password</string>
    <string name="flagApp">Ricordami</string>
    <string name="authText">Login</string>
    <string name="signText">Registrati</string>
    <string name="flagFinger" tools:ignore="Typos">Autenticazione biometrica? (Sarà possibile cambiare il settaggio in qualsiasi momento)</string>
    <string name="signButton">Sign In</string>
    <string name="nameHint">Nome</string>
    <string name="emailImage">Icona email</string>
    <string name="emailHint">E-mail</string>
    <string name="userImage">Icona utente</string>
    <string name="userText">Inserisci il tuo username</string>
    <string name="userHint">Username</string>
    <string name="passImage">Icona password</string>
    <string name="passText">Inserisci la tua password</string>
    <string name="passHint">Password</string>
    <string name="passText2">Ripeti la tua password</string>
    <string name="passHint2">Ripeti password</string>
    <string name="showPassImage">Icona mostra password</string>
    <string name="settings">Settings</string>
    <string name="action_edit">Modifica account</string>
    <string name="action_delete">Elimina account</string>
    <string name="action_copy">Copia account</string>
    <string name="action_cut">Sposta account</string>
    <string name="action_sort">Ordina account</string>
    <string name="action_setting">Impostazioni</string>
    <string name="action_exit">Esci</string>
    <string name="addButton">Aggiungi</string>
    <string name="emptyButton">Resetta</string>
    <string name="saveButton">Salva</string>
    <string name="customized">Non ordinare</string>
    <string name="customizedPopup">Personalizzato</string>
    <string name="increasing">Crescente</string>
    <string name="decreasing">Decrescente</string>
    <string name="profile">Profilo</string>
    <string name="customize">Personalizzazione</string>
    <string name="pdf">Estrai PDF</string>
    <string name="deleteProfile">Elimina profilo</string>
    <string name="editFlagFinger">Autenticazione biometrica?</string>
    <string name="editUsername">Modifica nome utente</string>
    <string name="editPassword">Modifica password</string>
    <string name="no">No</string>
    <string name="yes">Si</string>
    <string name="textProfile">Cosa vuoi fare?</string>
    <string name="textCostusmize">Cosa vuoi personalizzare?</string>
    <string name="passwordSecurityText">Conferma la tua password</string>
    <string name="Confirmation">Conferma</string>
    <string name="signTextView">Inserisci i dati per la registrazione</string>
    <string name="wellcome">Benvenuto</string>
    <string name="wellcomeMini">Numero account: 0</string>
    <string name="wellcome2">Lista della categoria </string>
    <string name="Sure">Sei sicuro di voler</string>
    <string name="text_search">Categorie:</string>
    <string name="text_PDF_Account">Imposta l\'ordine degli account</string>
    <string name="text_PDF2">Imposta l\'orientazione della pagina</string>
    <string name="description">Descrizione</string>
    <string name="name">Name</string>
    <string name="showButton">Bottone a tendina</string>
    <string name="editButton">Modifica elemento</string>
    <string name="deleteButton">Elimina elemento</string>
    <string name="action_select">Tutti</string>
    <string name="horizontal">Orizzontale</string>
    <string name="vertical">Verticale</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="category">Categoria</string>
    <string name="categoryTextCollapse">Numero categorie: 0</string>
    <string name="categoryTextCollapse2">Lista categorie di </string>
    <string name="categoryText">Come vuoi chiamare la nuova categoria?</string>
    <string name="categoryHint">Categoria</string>
    <string name="categoryImage">Immagine categoria</string>
    <string name="ColumnCategory">Colonne categorie</string>
    <string name="ColumnAccount">Colonne account</string>
    <string name="search">Cerca</string>
    <string name="checkBoxAll">Tutti</string>
    <string name="searchCategoria">Categoria</string>
    <string name="findSearchCategory">Trovati: 0</string>
    <string name="showSearchCategory">Mostra elementi categoria trovati</string>
    <string name="equalsText">Esiste gia un account di nome Account nella categoria Categoria. Cosa vuoi fare?</string>
    <string name="overWrite">Sovrascrivi</string>
    <string name="rename">Rinomina</string>
    <string name="ignore">Ignora</string>
    <string name="renameText">Rinomina account Account</string>
    <string name="append">Accoda</string>
    <string name="done">Ritorna alle categorie</string>
    <string name="doneText">Fatto!!</string>
    <string name="copy_or_cut">Copia/Sposta account</string>
    <string name="select_category">Seleziona le categorie interessate:</string>
    <string name="check_all">Tutte</string>
    <string name="select_all_cat">Seleziona tutto</string>
    <string name="app_name">Intro Slider</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="aboutbutton">aboutButton</string>
    <string name="copyright">Versione 3.1.3\n\n© 2022 Vincenzo Salvati Rights Reserved.</string>
    <string name="intro1">Benvenuto nell\'app Accounts!!</string>
    <string name="intro1_2">Sei stanco di dover ricordare in continuazione le tue password con le relative e-mail e nomi utente?\nBene hai scaricato l\'app che fa per te!! \n\n (È importante precisare che le tue credenziali e i tuoi account saranno memorizzati escluisivamente sul tuo Smartphone in specifiche cartelle segrete inaccessibili da terzi. Non vi è l\'ausilio di alcun server!!)</string>
    <string name="intro1_3">Una volta registrato all\'app Accounts potrai sfruttare appieno le funzionalità che ha da offririti.</string>
    <string name="imageintro1">imageIntro1</string>
    <string name="intro2">Verranno create inizialmente delle categorie di default (Giochi, Siti e Social) che potrai cancellare oltre che crearne di nuove.</string>
    <string name="intro2_2">All\'interno di ciascuna categoria verranno poi inseriti i relativi account.</string>
    <string name="intro2_3" tools:ignore="Typos">Sarà possibile dare loro un ordine a piacere (semplicemente trascinandole da una parte all\'altra) o ordinarle in maniera crescente e decrescente.</string>
    <string name="imageintro2">imageIntro2</string>
    <string name="intro3" tools:ignore="Typos">Sarà possibile effettuare mediante la barra delle ricerche una selezione dell\'account che ci serve, specificandone la categoria.</string>
    <string name="imageintro3">imageIntro3</string>
    <string name="imageintro4">imageintro4</string>
    <string name="intro4">Estrai i pdf dei tuoi account in maniera da poter stampare le informazioni di ciascuno di loro.\nUna volta selezionate le categorie potrai formalizzare il documento con il layout che preferisci.</string>
    <string name="imageintro4_2">imageintro4_4</string>
    <string name="intro5">Perfetto!!\nAdesso sei pronto.\nSai tutto quello che devi sapere =D</string>
    <string name="intro4_2" tools:ignore="Typos">Le password saranno invisibili così da nasconderle a qualche malintenzionato nelle vicinanze. Tuttavia è possibile copiarle anche da nascoste!!</string>
    <string name="introText">Cosa posso fare?</string>
    <string name="rename_category">Rinomina categoria</string>
    <string name="delete_category">Elimina categorie</string>
    <string name="sort_category">Ordina categorie</string>
    <string name="delete">Elimina</string>
    <string name="rename_cat">Come vuoi rinominare Categoria?</string>
    <string name="credentialText">Credenziali</string>
    <string name="authenticationText">Autenticazione Biometrica</string>
    <string name="recoveryText">Recupero password</string>
    <string name="questionEditText">Domanda personale</string>
    <string name="answerEditText">Risposta (solo una parola)</string>
    <string name="questionText">Inserisci la domanda (Seleziona "Altro" per inserire una domanda personale)</string>
    <string name="fingerImage">immagine biometrica</string>
    <string name="questionImage">Immagine domanda</string>
    <string name="infoButton">infoButton</string>
    <string name="passwordRecovery">Recupera la password</string>
    <string name="recoveryUserText">Scegli l\'utente associato alla password</string>
    <string name="goOn">PROSEGUI</string>
    <string name="recoveryPass">RECUPERA PASSWORD</string>
    <string name="answerEdit">Risposta</string>
    <string name="passTextView">La password è:</string>
    <string name="question">Domanda</string>
    <string name="editQuestion">MODIFICA DOMANDA SICUREZZA</string>
    <string name="changeQuestionAnsware">IMPOSTA</string>
    <string name="text_PDF_Category">Imposta l\'ordine delle categorie</string>
    <string name="accountsIcon">IconaAccounts</string>
    <string name="cancel">Return to main activity</string>
    <string name="back">Return back</string>
</resources>
