<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.accounts.ViewActivity">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:popupTheme="@style/MyDarkToolbarStyle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        app:popupTheme="@style/MyDarkToolbarStyle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/action_setting"
        app:popupTheme="@style/MyDarkToolbarStyle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:popupTheme="@style/MyDarkToolbarStyle"
        app:showAsAction="never" />
</menu>
