<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/nameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/uppercaseAppName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/rightText"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imageApp"
        android:src="@drawable/app" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_color">

        <EditText
            android:id="@+id/userApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/usernameHint"
            android:inputType="text"
            android:theme="@style/inputField"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/userAppImage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignStart="@+id/userApp"
            android:layout_alignBottom="@+id/userApp"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/userImage"
            android:src="@drawable/user" />

        <EditText
            android:id="@+id/passApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userApp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/passswordHint"
            android:inputType="textPassword"
            android:theme="@style/inputField"
            tools:targetApi="o" />


        <ImageView
            android:id="@+id/passAppImage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignStart="@+id/passApp"
            android:layout_alignBottom="@+id/passApp"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/passImage"
            android:src="@drawable/pass" />

        <ImageButton
            android:id="@+id/showPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/passApp"
            android:layout_alignBottom="@+id/passApp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/showPassImage"
            android:src="@android:drawable/ic_menu_view" />

        <Switch
            android:id="@+id/flagApp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/passApp"
            android:layout_alignStart="@id/passApp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/flagApp"
            android:textColor="#81FFFFFF"
            android:textSize="13sp"
            android:textStyle="normal|bold"
            android:theme="@style/SelectionSwitch" />

    </RelativeLayout>

</RelativeLayout>