<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passSecurityPopupMatchParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/accountsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/accountsIcon"
        android:src="@drawable/app" />

    <TextView
        android:id="@+id/passSecurityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountsIcon"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/passwordSecurityText"
        android:textColor="@color/rightText"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passSecurityEditText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passSecurityText"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:hint="@string/passHint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColor="@color/rightText"
        android:textSize="16sp"
        android:theme="@style/AppTheme.EditText"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/passSecurityImage"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/passSecurityEditText"
        android:layout_alignTop="@id/passSecurityEditText"
        android:layout_alignBottom="@+id/passSecurityEditText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/passImage"
        android:src="@drawable/pass" />

    <ImageButton
        android:id="@+id/showPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/passSecurityEditText"
        android:layout_alignEnd="@+id/passSecurityEditText"
        android:layout_alignBottom="@+id/passSecurityEditText"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/showPassImage"
        android:src="@android:drawable/ic_menu_view" />


    <Button
        android:id="@+id/confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passSecurityEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Confirmation"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryClear"
        android:textSize="18sp" />
</RelativeLayout>