<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categoryRenamePopup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_popup"
    android:orientation="vertical">

    <TextView
        android:id="@+id/categoryRenameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/rename_cat"
        android:textColor="@color/rightText"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/categoryRenameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryRenameText"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:hint="@string/categoryHint"
        android:textColor="@color/rightText"
        android:textColorHighlight="@color/textSelection"
        android:textSize="16sp"
        android:theme="@style/inputField"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/categoryImage"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/categoryRenameEditText"
        android:layout_alignTop="@id/categoryRenameEditText"
        android:layout_alignBottom="@+id/categoryRenameEditText"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/categoryImage"
        android:src="@drawable/category" />

    <Button
        android:id="@+id/confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryRenameEditText"
        android:background="@drawable/rounded_button"
        android:text="@string/Confirmation"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryClear"
        android:textSize="18sp" />
</RelativeLayout>