<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupAnswer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_popup"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/question"
        android:textColor="@color/rightText"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:hint="@string/answerEdit"
        android:inputType="text"
        android:maxLength="12"
        android:textColor="@color/rightText"
        android:textColorHighlight="@color/textSelection"
        android:textSize="16sp"
        android:theme="@style/AppTheme.EditText"
        tools:targetApi="o" />

    <Button
        android:id="@+id/recoveryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/recoveryPass"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryClear"
        android:textSize="18sp" />
</LinearLayout>